force-app/main/default/objects/Demo__c/fields/Video_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Video_File_Id__c</fullName>
    <inlineHelpText>Enter in the public File Id</inlineHelpText>
    <label>Video File Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>