force-app/main/default/objects/Demo__c/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <inlineHelpText>Please enter the embed URL for your chosen video</inlineHelpText>
    <label>Video URL</label>
    <length>254</length>
    <type>Text</type>
</CustomField>